# small_ml_projects

./: README.md  cifar-10.ipynb  markov_chain_rps.ipynb  rag.ipynb
camera_image_recognition/cnn/: main.ipynb  model.ipynb  pyproject.toml
camera_image_recognition/cnn/assets/: best_model.pth
