[project]
name = "wma-projekt4"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "tdqm>=0.0.1",
    "tinycss2==1.5.1",
    "torchinfo>=1.8.0",
]
